target_sources(hops PRIVATE hops.hpp)

add_subdirectory(FileReader)
add_subdirectory(FileWriter)
add_subdirectory(LinearProgram)
add_subdirectory(MarkovChain)
add_subdirectory(Model)
add_subdirectory(PolytopePreprocessing)
add_subdirectory(RandomNumberGenerator)
add_subdirectory(thirdparty)
add_subdirectory(Transformation)

