if (NOT HOPS_LIBRARY_TYPE STREQUAL "HEADER_ONLY")
    target_sources(hops PRIVATE hops.hpp)
endif (NOT HOPS_LIBRARY_TYPE STREQUAL "HEADER_ONLY")

add_subdirectory(extern)
add_subdirectory(Statistics)
add_subdirectory(FileReader)
add_subdirectory(FileWriter)
add_subdirectory(LinearProgram)
add_subdirectory(MarkovChain)
add_subdirectory(Model)
if(HOPS_DNEST4_SUPPORT)
	add_subdirectory(NestedSampling)
endif(HOPS_DNEST4_SUPPORT)
add_subdirectory(Optimization)
add_subdirectory(Polytope)
add_subdirectory(Parallel)
add_subdirectory(RandomNumberGenerator)
add_subdirectory(Transformation)
add_subdirectory(Utility)

